--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[こえあい@そふぃあ](https://twitter.com/koeai_sophia)",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "./node_modules/.bin/gulp",
+    "watch": "./node_modules/.bin/gulp watch"
   },
   "repository": {
     "type": "git",
@@ -18,15 +19,15 @@
   },
   "homepage": "https://github.com/koeai/koeai.github.io#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
+    "browserify": "^14.4.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-notify": "^2.2.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-pug": "^3.0.4",
-    "gulp-sass": "^2.3.2",
+    "gulp-pug": "^3.3.0",
+    "gulp-sass": "^3.1.0",
     "gulp-webserver": "^0.9.1",
     "vinyl-source-stream": "^1.1.0"
   }
