--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "gulpfile.js",
   "scripts": {
     "build": "./node_modules/.bin/gulp",
-    "watch": "./node_modules/.bin/gulp watch"
+    "watch": "./node_modules/.bin/gulp watch",
+    "webpack": "./node_modules/.bin/webpack --config webpack.config.babel.js",
+    "build:js": "npm run webpack",
+    "watch:js": "WATCH=true ./node_modules/.bin/webpack-dev-server --config webpack.config.babel.js"
   },
   "repository": {
     "type": "git",
@@ -19,9 +22,10 @@
   },
   "homepage": "https://github.com/koeai/koeai.github.io#readme",
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-notify": "^3.0.0",
@@ -29,6 +33,12 @@
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-webserver": "^0.9.1",
-    "vinyl-source-stream": "^1.1.0"
+    "webpack": "^3.5.4",
+    "webpack-dev-server": "^2.7.1"
+  },
+  "babel": {
+    "plugins": [
+      "transform-es2015-modules-commonjs"
+    ]
   }
 }
